test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/static_then_extern.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 3
            None: 
          None: 
        Int: 
        CStatic: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: foo
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        None: 
        Int: 
        CExtern: 
