test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/non_constant_static_local_initializer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: b
                  CSingleInit: 
                    CBinary: 
                      CMultiply: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    None: 
                  Int: 
                  CStatic: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: b
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
